# trader

./: .gitignore  README.md  mypy.ini  requirements.txt  requirements_dev.txt  run_pkg_doctests.py  setup.cfg  setup.py  xyz.py
.github/workflows/: tests.yaml
assets/: __init__.py  date_picker.css  radio_items.css
docs/: backtest_framework.odt  order_mapping.odt  requirements.odt
examples/backtests/: blank.py  ema_cross.py  rsi.py  rsi_with_ma.py  static_price.py  tp_sl.py  trailing_stop.py  xy.py  yy.py
examples/candle_patterns/: candle_blend_example1.py  candle_blend_example2.py  candle_pattern.py
examples/candlestick_patterns/: __init__.py  engulfing.py  three_line_strike.py
examples/indicators/: rsi.py
examples/live/: rsi.py
examples/pinescripts/: README.md  ma_cross.txt
mysecrets/: __init__.py
tests/: __init__.py  backtest_position_test.py
tests/backtest/: array_tape_test.py  backtest_trading_indicator.py  backtest_trading_test.py  backtest_trading_test_exit.py  backtest_trading_test_sl_tp.py  indicator_optimizer.py  multi_backtest_test.py  order_group_test.py  position_test.py  result_test.py  test_candles.py  util_test.py
tests/util/: common_test.py  numpy_test.py
trader/: __init__.py  config.py  log.py  settings.py  trade.py
trader/backtest/: __init__.py  backtester.py  balance.py  bot.py  broker.py  custom_graph.py  exceptions.py  futures_broker.py  futures_trader.py  futures_trader2.py  indicator_optimizer.py  log.py  optimizer.py  order_group.py  plot.py  plotter.py  position.py  quickstart.py  short_long_analyzer.py  tape.py  util.py  (+4 more)
util/: erase.py  file.py  file_util.py  filter_util.py  format.py  format_util.py  func.py  generate.py  inspect_util.py  interval.py  iter_util.py  list_util.py  log.py  meta.py  module.py  notification.py  observer.py  performance.py  super_enum.py  truth.py
(+221 files in other folders)
