[metadata]
name = trader
description = This library helps you to backtest and live trade trading strategies.
author = Ricky
author_email = p.ricky.dev@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
version = 0.1.0
url = https://github.com/Ricky294/trader
install_requires =
    numpy>=1.21.5
    pandas>=1.3.0
    python-binance>=1.0.15
    tqdm>=4.62.0
    plotly>=5.5.0
    numba>=0.55.0


[options]
package_dir=
    =.
packages = find:
test_suite = tests
include_package_data = True
zip_safe = False

[options.packages.find]
where = .

[options.extras_require]
testing =
    pytest>=6.0
